[gd_scene load_steps=2 format=3 uid="uid://c3gjkq5vrept"]

[ext_resource type="Script" path="res://scripts/bubble_generator.gd" id="1_qa0qs"]

[node name="BubbleGenerator" type="Node2D"]
script = ExtResource("1_qa0qs")

[node name="BubbleSpawnTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="BubbleCollection" type="Node" parent="."]

[connection signal="timeout" from="BubbleSpawnTimer" to="." method="_bubble_spawn_time_out"]
